Use the new builder pattern for OpenAiSdkChatOptions
Signed-off-by: Sébastien Deleuze <sdeleuze@users.noreply.github.com>