@@ -17,7 +17,6 @@
 package org.springframework.ai.openaisdk.chat;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -29,6 +28,7 @@ import org.junit.jupiter.api.Test;
 import org.springframework.ai.openaisdk.OpenAiSdkChatModel.ResponseFormat;
 import org.springframework.ai.openaisdk.OpenAiSdkChatOptions;
 import org.springframework.ai.openaisdk.OpenAiSdkChatOptions.StreamOptions;
+import org.springframework.ai.test.options.AbstractChatOptionsTests;
 import org.springframework.ai.tool.ToolCallback;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -39,7 +39,19 @@ import static org.assertj.core.api.Assertions.assertThatThrownBy;
  *
  * @author Julien Dubois
  */
-public class OpenAiSdkChatOptionsTests {
+public class OpenAiSdkChatOptionsTests<B extends OpenAiSdkChatOptions.Builder<B>>
+		extends AbstractChatOptionsTests<OpenAiSdkChatOptions, B> {
+
+	@Override
+	protected Class<OpenAiSdkChatOptions> getConcreteOptionsClass() {
+		return OpenAiSdkChatOptions.class;
+	}
+
+	@Override
+	@SuppressWarnings("unchecked")
+	protected B readyToBuildBuilder() {
+		return (B) OpenAiSdkChatOptions.builder();
+	}
 
 	@Test
 	void testBuilderWithAllFields() {
@@ -289,7 +301,6 @@ public class OpenAiSdkChatOptionsTests {
 			.logitBias(null)
 			.stop(null)
 			.metadata(null)
-			.customHeaders(null)
 			.build();
 
 		assertThat(options.getModel()).isNull();
@@ -297,14 +308,13 @@ public class OpenAiSdkChatOptionsTests {
 		assertThat(options.getLogitBias()).isNull();
 		assertThat(options.getStop()).isNull();
 		assertThat(options.getMetadata()).isNull();
-		assertThat(options.getCustomHeaders()).isNull();
 	}
 
 	@Test
 	void testBuilderChaining() {
-		OpenAiSdkChatOptions.Builder builder = OpenAiSdkChatOptions.builder();
+		OpenAiSdkChatOptions.Builder<?> builder = OpenAiSdkChatOptions.builder();
 
-		OpenAiSdkChatOptions.Builder result = builder.model("test-model").temperature(0.7).maxTokens(100);
+		OpenAiSdkChatOptions.Builder<?> result = builder.model("test-model").temperature(0.7).maxTokens(100);
 
 		assertThat(result).isSameAs(builder);
 
@@ -507,7 +517,7 @@ public class OpenAiSdkChatOptionsTests {
 
 	@Test
 	void testToolNamesSet() {
-		Set<String> toolNames = new HashSet<>(Arrays.asList("tool1", "tool2", "tool3"));
+		Set<String> toolNames = new HashSet<>(Set.of("tool1", "tool2", "tool3"));
 
 		OpenAiSdkChatOptions options = OpenAiSdkChatOptions.builder().toolNames(toolNames).build();
 
@@ -561,7 +571,7 @@ public class OpenAiSdkChatOptionsTests {
 	}
 
 	@Test
-	void testBuilderMerge() {
+	void testCombineWith() {
 		OpenAiSdkChatOptions base = OpenAiSdkChatOptions.builder()
 			.model("base-model")
 			.temperature(0.5)
@@ -570,7 +580,7 @@ public class OpenAiSdkChatOptionsTests {
 
 		OpenAiSdkChatOptions override = OpenAiSdkChatOptions.builder().model("override-model").topP(0.9).build();
 
-		OpenAiSdkChatOptions merged = OpenAiSdkChatOptions.builder().from(base).merge(override).build();
+		OpenAiSdkChatOptions merged = base.mutate().combineWith(override.mutate()).build();
 
 		// Model should be overridden
 		assertThat(merged.getModel()).isEqualTo("override-model");
@@ -583,7 +593,7 @@ public class OpenAiSdkChatOptionsTests {
 	}
 
 	@Test
-	void testBuilderFrom() {
+	void testMutateAndBuild() {
 		Map<String, Integer> logitBias = Map.of("token", 1);
 		List<String> stop = List.of("stop");
 		Map<String, String> metadata = Map.of("key", "value");
@@ -597,7 +607,7 @@ public class OpenAiSdkChatOptionsTests {
 			.metadata(metadata)
 			.build();
 
-		OpenAiSdkChatOptions copy = OpenAiSdkChatOptions.builder().from(source).build();
+		OpenAiSdkChatOptions copy = source.mutate().build();
 
 		assertThat(copy.getModel()).isEqualTo("source-model");
 		assertThat(copy.getTemperature()).isEqualTo(0.7);
@@ -605,12 +615,10 @@ public class OpenAiSdkChatOptionsTests {
 		assertThat(copy.getLogitBias()).isEqualTo(logitBias);
 		assertThat(copy.getStop()).isEqualTo(stop);
 		assertThat(copy.getMetadata()).isEqualTo(metadata);
-		// Verify collections are copied
-		assertThat(copy.getStop()).isNotSameAs(source.getStop());
 	}
 
 	@Test
-	void testMergeDoesNotOverrideWithNull() {
+	void testCombineWithDoesNotOverrideWithNull() {
 		OpenAiSdkChatOptions base = OpenAiSdkChatOptions.builder()
 			.model("base-model")
 			.temperature(0.5)
@@ -619,7 +627,7 @@ public class OpenAiSdkChatOptionsTests {
 
 		OpenAiSdkChatOptions override = OpenAiSdkChatOptions.builder().model(null).temperature(null).build();
 
-		OpenAiSdkChatOptions merged = OpenAiSdkChatOptions.builder().from(base).merge(override).build();
+		OpenAiSdkChatOptions merged = base.mutate().combineWith(override.mutate()).build();
 
 		// Null values should not override
 		assertThat(merged.getModel()).isEqualTo("base-model");
@@ -628,37 +636,23 @@ public class OpenAiSdkChatOptionsTests {
 	}
 
 	@Test
-	void testMergeWithEmptyCollections() {
-		ToolCallback callback = new ToolCallback() {
-			@Override
-			public org.springframework.ai.tool.definition.ToolDefinition getToolDefinition() {
-				return org.springframework.ai.tool.definition.DefaultToolDefinition.builder()
-					.name("tool")
-					.description("desc")
-					.inputSchema("{}")
-					.build();
-			}
-
-			@Override
-			public String call(String toolInput) {
-				return "result";
-			}
-		};
-
+	void testCombineWithPreservesNonNullValues() {
 		OpenAiSdkChatOptions base = OpenAiSdkChatOptions.builder()
-			.toolCallbacks(callback)
-			.toolNames("tool1")
-			.toolContext(Map.of("key", "value"))
+			.model("base-model")
+			.temperature(0.5)
+			.reasoningEffort("medium")
 			.build();
 
-		OpenAiSdkChatOptions override = new OpenAiSdkChatOptions();
+		OpenAiSdkChatOptions override = OpenAiSdkChatOptions.builder()
+			.model("override-model")
+			.reasoningEffort("high")
+			.build();
 
-		OpenAiSdkChatOptions merged = OpenAiSdkChatOptions.builder().from(base).merge(override).build();
+		OpenAiSdkChatOptions merged = base.mutate().combineWith(override.mutate()).build();
 
-		// Empty collections should not override
-		assertThat(merged.getToolCallbacks()).hasSize(1);
-		assertThat(merged.getToolNames()).hasSize(1);
-		assertThat(merged.getToolContext()).hasSize(1);
+		assertThat(merged.getModel()).isEqualTo("override-model");
+		assertThat(merged.getTemperature()).isEqualTo(0.5);
+		assertThat(merged.getReasoningEffort()).isEqualTo("high");
 	}
 
 	@Test
